--- a/init/init.pocoparts.rc
+++ b/init/init.pocoparts.rc
@@ -31,3 +31,7 @@ on boot
 # USB 2.0 Force Fast Charge
   chown system system /sys/kernel/fast_charge/force_fast_charge
   chmod 0666 /sys/kernel/fast_charge/force_fast_charge
+
+# Vibration
+    chown system system /sys/class/leds/vibrator/vtg_level
+    chmod 0660 /sys/class/leds/vibrator/vtg_level
